# StudentManagementSystem

./: .gitignore  CMakeLists.txt  README.md  last_word_length.cpp
include/: Student.h  StudentManager.h
python_tests/: README.md  run_tests.py  test_utils.py
src/: Student.cpp  StudentManager.cpp  main.cpp
tests/: SimpleTests.cpp  StudentManagerTests.cpp  StudentTests.cpp
